--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- No idea what this is -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Check out The Bean Machines best coffee offers for you! We provide a large variety of whole and ground beans." />
   <!-- Fontawesome link for icons in footer | Link & Script -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <script src="https://kit.fontawesome.com/18795bf9d8.js" crossorigin="anonymous"></script>
   <!-- Title of Webpage -->
-  <title>The Bean Machine</title>
+  <title>The Bean Machin Coffee Shop</title>
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,28 +20,30 @@
 <body>
   <!-- Header content for text-logo and nav menu -->
   <header class="container">
+    <!--Header Logo(Left)-->
     <div class="logo">
       <a href="index.html">
-        <img src="assets/bean_machine_text_logo.png" alt="textLogo" />
+        <img src="assets/bean_machine_text_logo.png" alt="The Bean Machine Text" />
       </a>
     </div>
+    <!--Header Nav Menu(Right)-->
     <nav class="menu">
-      <a href="#" class="menuItem">About</a>
-      <a href="#" class="menuItem">Selection</a>
-      <a href="#"> <button class="buttonMenuItem">Login</button></a>
+      <a href="" class="menuItem">About</a>
+      <a href="" class="menuItem">Selection</a>
+      <a href=""> 
+        <button class="buttonMenuItem">Login</button>
+      </a>
     </nav>
   </header>
-
-  <!-- main content -->
-  <!-- Page Title, input and shop logo -->
+  <!-- Main content: Page title, input & logo -->
   <main class="container">
     <section class="hero">
-      <img src="assets/bean_machine_logo.png" class="mainLogo" alt="personHoldingCoffee"/>
+      <img src="assets/bean_machine_logo.png" class="mainLogo" alt="Bean Machine Logo - Man hugging large cup of coffee"/>
       <h1 class="beanMachineTitle">The Bean <br> Machine <br> <span>Coffee Bean Shop</span></h1>
       <input type="text" placeholder="Search for a coffee bean">
       <button class="arrowBtn"><img src="assets/arrow_right.png" /></button>
     </section>
-  <!-- About Section -->
+  <!-- About content-->
     <section class="about">
       <h2>About</h2>
       <p>We are a specialty Coffee Bean Shop based in Barcelona, Spain.</p>
@@ -56,7 +58,7 @@
           <a href="#">
             <img src="assets/coffee_beans.png" width="192px" height="256px" alt="some sample words">
           </a>
-          <p class=coffeeDesc>Costa Rica Single Origin</p>
+          <p class="coffeeDesc">Costa Rica Single Origin</p>
           <a href="#">
             <button class="itemBtn">Buy</button>
           </a> 
@@ -65,14 +67,14 @@
           <a href="#">
             <img src="assets/coffee_beans.png" width="192px" height="256px" alt="some sample words">
           </a>
-          <p class=coffeeDesc>Brazil Medium Roast</p>
+          <p class="coffeeDesc">Brazil Medium Roast</p>
           <a class="btn" href="#"><button class="itemBtn">Buy</button></a>
         </div>
         <div class="col">
           <a href="#">
             <img src="assets/coffee_beans.png" width="192px" height="256px" alt="some sample words">
           </a>
-          <p class=coffeeDesc>Columbia Single Origin</p>
+          <p class="coffeeDesc">Columbia Single Origin</p>
           <a class="btn" href="#"><button class="itemBtn">Buy</button></a>
         </div>
       </div>
